--- a/index.html
+++ b/index.html
@@ -70,12 +70,7 @@ fbq('track', 'PageView');
         <style class="wp-fonts-local">@font-face{ font-family: "DM Sans"; font-style: normal; font-weight: 400; font-display: fallback; src: url('fonts/DMSans-Regular.woff2') format('woff2'); font-stretch: normal; } @font-face{ font-family: "DM Sans"; font-style: italic; font-weight: 400; font-display: fallback; src: url('fonts/DMSans-Regular-Italic.woff2') format('woff2'); font-stretch: normal; } @font-face{ font-family: "DM Sans"; font-style: normal; font-weight: 700; font-display: fallback; src: url('fonts/DMSans-Bold.woff2') format('woff2'); font-stretch: normal; } @font-face{ font-family: "DM Sans"; font-style: italic; font-weight: 700; font-display: fallback; src: url('fonts/DMSans-Bold-Italic.woff2') format('woff2'); font-stretch: normal; } @font-face{ font-family: "IBM Plex Mono"; font-style: normal; font-weight: 300; font-display: block; src: url('fonts/IBMPlexMono-Light.woff2') format('woff2'); font-stretch: normal; } @font-face{ font-family: "IBM Plex Mono"; font-style: normal; font-weight: 400; font-display: block; src: url('fonts/IBMPlexMono-Regular.woff2') format('woff2'); font-stretch: normal; } @font-face{ font-family: "IBM Plex Mono"; font-style: italic; font-weight: 400; font-display: block; src: url('fonts/IBMPlexMono-Italic.woff2') format('woff2'); font-stretch: normal; } @font-face{ font-family: "IBM Plex Mono"; font-style: normal; font-weight: 700; font-display: block; src: url('fonts/IBMPlexMono-Bold.woff2') format('woff2'); font-stretch: normal; } @font-face{ font-family: Inter; font-style: normal; font-weight: 200 900; font-display: fallback; src: url('fonts/Inter-VariableFont_slnt%2Cwght.ttf') format('truetype'); font-stretch: normal; } @font-face{ font-family: "Source Serif Pro"; font-style: normal; font-weight: 200 900; font-display: fallback; src: url('fonts/SourceSerif4Variable-Roman.ttf.woff2') format('woff2'); font-stretch: normal; } @font-face{ font-family: "Source Serif Pro"; font-style: italic; font-weight: 200 900; font-display: fallback; src: url('fonts/SourceSerif4Variable-Italic.ttf.woff2') format('woff2'); font-stretch: normal; }</style>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     </head>
-    <script
-  src="https://cdn.utmify.com.br/scripts/utms/latest.js"
-  data-utmify-prevent-subids
-  async
-  defer
-></script>
+    <script src="https://cdn.utmify.com.br/scripts/utms/latest.js" data-utmify-prevent-subids async defer></script>
     <body class="home page-template page-template-elementor_canvas page page-id-395 wp-embed-responsive elementor-default elementor-template-canvas elementor-kit-5 elementor-page elementor-page-395">
         <div data-elementor-type="wp-page" data-elementor-id="395" class="elementor elementor-395">
             <section class="elementor-section elementor-top-section elementor-element elementor-element-73a193b2 elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="73a193b2" data-element_type="section" data-settings="{" background_background":"gradient","shape_divider_bottom":"tilt"}"="">
@@ -642,7 +637,7 @@ fbq('track', 'PageView');
                             <div class="elementor-element elementor-element-309ec5cd elementor-align-center elementor-widget elementor-widget-button" data-id="309ec5cd" data-element_type="widget" data-widget_type="button.default">
                                 <div class="elementor-widget-container">
                                     <div class="elementor-button-wrapper">
-                                        <a class="elementor-button elementor-button-link elementor-size-md elementor-animation-grow" href="https://pay.urusoficial.com.br/W2GKGWN8XAHUM"><span class="elementor-button-content-wrapper"><span class="elementor-button-text">QUERO ESSA OFERTA</span></span></a>
+                                        <a class="elementor-button elementor-button-link elementor-size-md elementor-animation-grow" href="https://e-books-pp.pay.yampi.com.br/r/EYYA8XRZOP"><span class="elementor-button-content-wrapper"><span class="elementor-button-text">QUERO ESSA OFERTA</span></span></a>
                                     </div>
                                 </div>
                             </div>
@@ -667,7 +662,7 @@ fbq('track', 'PageView');
                             </div>
                             <div class="elementor-element elementor-element-f7f9b0a elementor-widget elementor-widget-heading" data-id="f7f9b0a" data-element_type="widget" data-widget_type="heading.default">
                                 <div class="elementor-widget-container">
-                                    <h2 class="elementor-heading-title elementor-size-default">R$27</h2> 
+                                    <h2 class="elementor-heading-title elementor-size-default">R$15</h2> 
                                 </div>
                             </div>
                             <div class="elementor-element elementor-element-cb5bb3e elementor-widget elementor-widget-heading" data-id="cb5bb3e" data-element_type="widget" data-widget_type="heading.default">
@@ -703,7 +698,7 @@ fbq('track', 'PageView');
                             <div class="elementor-element elementor-element-c18e9fb elementor-align-center elementor-widget elementor-widget-button" data-id="c18e9fb" data-element_type="widget" data-widget_type="button.default">
                                 <div class="elementor-widget-container">
                                     <div class="elementor-button-wrapper">
-                                        <a class="elementor-button elementor-button-link elementor-size-md elementor-animation-grow" href="https://redirect.urusoficial.com.br/D76D0BD4NSVES"><span class="elementor-button-content-wrapper"><span class="elementor-button-text">QUERO ESSA OFERTA</span></span></a>
+                                        <a class="elementor-button elementor-button-link elementor-size-md elementor-animation-grow" href="https://e-books-pp.pay.yampi.com.br/r/11RUQA2A76"><span class="elementor-button-content-wrapper"><span class="elementor-button-text">QUERO ESSA OFERTA</span></span></a>
                                     </div>
                                 </div>
                             </div>
@@ -751,12 +746,12 @@ fbq('track', 'PageView');
                             </div>
                             <div class="elementor-element elementor-element-88294c0 elementor-widget elementor-widget-heading" data-id="88294c0" data-element_type="widget" data-widget_type="heading.default">
                                 <div class="elementor-widget-container">
-                                    <h2 class="elementor-heading-title elementor-size-default"><span style="font-size:22px">8x de  </span><span style="color:#02CE23">R$5,25</span></h2> 
+                                    <h2 class="elementor-heading-title elementor-size-default"><span style="font-size:22px">5x de  </span><span style="color:#02CE23">R$5,27</span></h2> 
                                 </div>
                             </div>
                             <div class="elementor-element elementor-element-9bb4532 elementor-widget elementor-widget-heading" data-id="9bb4532" data-element_type="widget" data-widget_type="heading.default">
                                 <div class="elementor-widget-container">
-                                    <h2 class="elementor-heading-title elementor-size-default">ou <u>R$37,00 à vista</u></h2> 
+                                    <h2 class="elementor-heading-title elementor-size-default">ou <u>R$27,00 à vista</u></h2> 
                                 </div>
                             </div>
                             <div class="elementor-element elementor-element-9ee0071 elementor-widget elementor-widget-heading" data-id="9ee0071" data-element_type="widget" data-widget_type="heading.default">
@@ -796,7 +791,7 @@ fbq('track', 'PageView');
                             <div class="elementor-element elementor-element-7b9c63f elementor-align-center elementor-widget elementor-widget-button" data-id="7b9c63f" data-element_type="widget" data-widget_type="button.default">
                                 <div class="elementor-widget-container">
                                     <div class="elementor-button-wrapper">
-                                        <a class="elementor-button elementor-button-link elementor-size-md elementor-animation-grow" href="https://redirect.urusoficial.com.br/WQBCCVDP50ID6"><span class="elementor-button-content-wrapper"><span class="elementor-button-text">SIM! QUERO TURBINAR AINDA MAIS MEUS ESTUDOS</span></span></a>
+                                        <a class="elementor-button elementor-button-link elementor-size-md elementor-animation-grow" href="https://e-books-pp.pay.yampi.com.br/r/OTOY36IFRL"><span class="elementor-button-content-wrapper"><span class="elementor-button-text">SIM! QUERO TURBINAR AINDA MAIS MEUS ESTUDOS</span></span></a>
                                     </div>
                                 </div>
                             </div>
