--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@ fbq('track', 'PageView');
                         <div class="elementor-widget-wrap elementor-element-populated">
                             <div class="elementor-element elementor-element-6e983fc elementor-widget elementor-widget-heading" data-id="6e983fc" data-element_type="widget" data-widget_type="heading.default">
                                 <div class="elementor-widget-container">
-                                    <h2 class="elementor-heading-title elementor-size-default">Oferta Básica<br><br>Mapas Mentais de Portugues</h2> 
+                                    <h2 class="elementor-heading-title elementor-size-default">Oferta Básica<br><br>Mapas Mentais de Português</h2> 
                                 </div>
                             </div>
                             <div class="elementor-element elementor-element-ce828db elementor-widget elementor-widget-heading" data-id="ce828db" data-element_type="widget" data-widget_type="heading.default">
